fixing font issue on iPhone

--- a/css/styles.css
+++ b/css/styles.css
@@ -128,6 +128,7 @@ h1, h2, h3, h4, h5, h6 {
 #message {
     background-color: #c9d6df;
     color: #1e2022;
+    font-weight: 700;
     text-align: left;
     padding-bottom: 0rem;
 }
